@@ -1348,6 +1348,9 @@
 				RelativePath="..\..\include\wx\event.h">
 			</File>
 			<File
+				RelativePath="..\..\include\wx\eventfilter.h">
+			</File>
+			<File
 				RelativePath="..\..\include\wx\evtloop.h">
 			</File>
 			<File
